--- a/imports/client/styles/components/_player.scss
+++ b/imports/client/styles/components/_player.scss
@@ -12,6 +12,7 @@ font-size: 1.8rem;
 font-size: 1.3rem;
 font-style: italic;
 font-weight: 300;
+margin-bottom: 0;
 }
 .player__actions{
 flex-shrink: 0
