--- a/imports/client/styles/_main.scss
+++ b/imports/client/styles/_main.scss
@@ -10,7 +10,6 @@ $red-alt:darken($red,15%);
 
 
 
-
 * {
 margin:0;
 padding:0;
@@ -33,6 +32,58 @@ font-weight: 300;
 font-size: 2.4rem;
 }
 
+
+.selected{
+	background:lightgreen;
+}
+.fa-user-circle{
+	color:green;
+  font-size: 25px;
+  line-height: 25px;
+  background-color:#333333;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  vertical-align: center;
+  border-radius: .5rem;
+  margin-right: 1.5rem;
+}
+
+ul{
+	list-style:none;
+}
+
+.fa-trash-o{
+  color:red;
+  text-align: center;
+  margin: auto 0;
+  text-align: center;
+   vertical-align: bottom;
+}
+.fa-plus{
+  color:green;
+  text-align: center;
+  margin: auto 0;
+  text-align: center;
+   vertical-align: bottom;
+}
+// .add__button:hover{
+// background-color:green;
+// }
+// .delete__button:hover{
+// background-color: red;
+// }
+// .minus__button:hover{
+// background-color: orange;
+// }
+span{
+	font-size: 1rem;
+}
+.form__score{
+	max-width:10rem;
+  font-weight: 500;
+  margin:0;
+}
 
 @import './components/title-bar';
 @import './components/wrapper';
