--- a/imports/client/styles/components/_title-bar.scss
+++ b/imports/client/styles/components/_title-bar.scss
@@ -1,8 +1,27 @@
 .title-bar{
-background-color:#e35557;
+background-color: #06425C;
+// #e35557;
 color:#fff;
 }
 .title-bar__subtitle{
 font-size: 1.3rem;
 font-weight: 400;
+}
+
+.login-buttons-dropdown-align{
+
+}
+.login-link-and-dropdown-align{
+background:black;
+}
+.login-link-text{
+
+}
+.login-name-link{
+
+}
+#login-buttons{
+  display: inline;
+float:right;
+
 }
